@@ -50,7 +50,7 @@ public class BudgetConstructionPullup extends PersistableBusinessObjectBase {
      * Default constructor.
      */
     public BudgetConstructionPullup() {
-        pullFlag = new Integer(0);
+        pullFlag = Integer.valueOf(0);
     }
 
     /**
