@@ -105,7 +105,7 @@ public class AccountBalanceByObjectLookupableHelperServiceImpl extends AbstractL
         String ufy = (String) fieldValues.get(KFSPropertyConstants.UNIVERSITY_FISCAL_YEAR);
 
         // TODO Deal with invalid numbers
-        Integer universityFiscalYear = new Integer(Integer.parseInt(ufy));
+        Integer universityFiscalYear = Integer.valueOf(Integer.parseInt(ufy));
 
         List results = accountBalanceService.findAccountBalanceByObject(universityFiscalYear, chartOfAccountsCode, accountNumber, subAccountNumber, financialObjectLevelCode, financialReportingSortCode, isCostShareExcluded, isConsolidated, pendingEntryCode);
 
@@ -119,6 +119,6 @@ public class AccountBalanceByObjectLookupableHelperServiceImpl extends AbstractL
             dbo.setPendingEntryOption(pendingEntryOption);
             dbo.setLinkButtonOption(Constant.LOOKUP_BUTTON_VALUE);
         }
-        return new CollectionIncomplete(results, new Long(results.size()));
+        return new CollectionIncomplete(results, Long.valueOf(results.size()));
     }
 }
