@@ -24,15 +24,15 @@ import org.kuali.kfs.module.purap.document.RequisitionDocument;
 public enum ContractManagerAssignmentDetailFixture {
 
     ACM_DETAIL_REQ_ONLY_REQUIRED_FIELDS("", // documentNumber
-            new Integer(12),   // contractManagerCode
+            Integer.valueOf(12),   // contractManagerCode
             RequisitionDocumentFixture.REQ_NO_APO_VALID.createRequisitionDocument() // purchasingDocumentFixture
     ),
     ACM_DETAIL_REQ_ONLY_REQUIRED_FIELDS_2("", // documentNumber
-            new Integer(12),   // contractManagerCode
+            Integer.valueOf(12),   // contractManagerCode
             RequisitionDocumentFixture.REQ_NO_APO_VALID_2.createRequisitionDocument() // purchasingDocumentFixture
     ),
     ACM_DETAIL_PERFORMANCE("", // documentNumber
-            new Integer(10),   // contractManagerCode
+            Integer.valueOf(10),   // contractManagerCode
             RequisitionDocumentFixture.REQ_PERFORMANCE.createRequisitionDocument() // purchasingDocumentFixture
     ),
  ;
