@@ -95,7 +95,7 @@ public class HoldQuestionHandler implements QuestionHandler<TravelDocument> {
                 return (T) asker.confirm(HOLD_TA_QUESTION, question, true, ERROR_TA_REASON_REQUIRED,QUESTION_REASON_ATTRIBUTE_NAME,HOLD_TA_TEXT);
             }
             else {
-                return (T) asker.confirm(HOLD_TA_QUESTION, question, true, ERROR_TA_REASON_PASTLIMIT, QUESTION_REASON_ATTRIBUTE_NAME, new Integer(reasonLimit).toString());
+                return (T) asker.confirm(HOLD_TA_QUESTION, question, true, ERROR_TA_REASON_PASTLIMIT, QUESTION_REASON_ATTRIBUTE_NAME, Integer.valueOf(reasonLimit).toString());
             }
         }
 
